@@ -5,12 +5,14 @@ import org.openqa.selenium.Dimension;
 import org.openqa.selenium.JavascriptExecutor;
 import org.openqa.selenium.WebElement;
 import org.testng.Assert;
+import org.testng.ITestResult;
 import org.testng.annotations.*;
 import pages.common_pages.AlertMessageLocators;
 import pages.common_pages.HomePageDepartmentSection;
 import pages.user_pages.DepartmentPage;
 import utilities.*;
 
+import java.time.Duration;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 
@@ -27,13 +29,44 @@ public class US11 extends TestBaseRapor {
     }
 
     @AfterMethod
-    public void tearDownTests(){
+    public void tearDownTests(ITestResult result){
         // Mobil testlerden (TC_08) sonra pencereyi eski haline getir
         Driver.getDriver().manage().window().maximize();
-        Driver.getDriver().get(ConfigReader.getProperty("url"));
 
-        // Güvenli çıkış
-        SignOut.signOutUser();
+        if (result.getStatus() == ITestResult.SUCCESS) {
+            SignOut.signOutUser();
+        }
+    }
+
+    @DataProvider(name = "negatifVeriler")
+    public Object[][] negatifTestVerisiOlustur() {
+        Faker faker = new Faker();
+        return new Object[][] {
+                {"03.03.1453", "5551234455", "Kısa"},
+                {"20.05.2026", "abc1234!", "Normal Mesaj"},
+                {"20.05.2026", "5556667788", ""},
+                {"20.05.2026", "5556667788", faker.lorem().characters(1000)},
+                {"20.05.3000", "5556667788", "Normal Mesaj"},
+                {"20as052026", "5556667788", "Normal Mesaj"},
+                {"20.05.2026", faker.number().digits(1000), "Normal Mesaj"},
+                {faker.lorem().characters(1000), "5556667788", "Normal Mesaj"}
+        };
+    }
+
+    @DataProvider(name = "pozitifVeriSeti")
+    public Object[][] pozitifTestVerisiOlustur() {
+        Faker faker = new Faker();
+
+        String gelecekTarih1 = LocalDateTime.now().plusDays(5).format(DateTimeFormatter.ofPattern("ddMMyyyy"));
+        String gelecekTarih2 = LocalDateTime.now().plusMonths(1).format(DateTimeFormatter.ofPattern("ddMMyyyy"));
+
+        return new Object[][] {
+                {gelecekTarih1, faker.number().digits(10), "Standart randevu mesajı."},
+                {gelecekTarih2, "5554443322", "Kısa"},
+                {gelecekTarih1, faker.phoneNumber().subscriberNumber(10), faker.lorem().sentence(5)},
+                {gelecekTarih2, "2123334455", "Lütfen evcil hayvanım için dikkatli olun."},
+                {gelecekTarih1, "05321112233", "Acil olmayan rutin kontrol talebi."}
+        };
     }
 
     @Test(priority = 1)
@@ -61,13 +94,11 @@ public class US11 extends TestBaseRapor {
     @Test(priority = 3)
     public void TC_03_DepartmentsLinkiVeYonlendirmeKontrolu() {
         extentTest = extentReports.createTest("TC_03 - Departments Bağlantısı ve Yönlendirme Kontrolü");
-        ReusableMethods.scrollToElement(homePageDepartmentSection.departmanTitleSection);
 
         Assert.assertTrue(ReusableMethods.isDisplayedAndClickable(homePageDepartmentSection.departmentsLink, timeout));
         extentTest.info("Departments linkinin aktif olduğu doğrulandı.");
 
-        JavascriptExecutor js = (JavascriptExecutor) Driver.getDriver();
-        js.executeScript("arguments[0].click();", homePageDepartmentSection.departmentsLink);
+        homePageDepartmentSection.departmentsLink.click();
         String expectedUrl = ConfigReader.getProperty("departmentsUrl");
         Assert.assertEquals(Driver.getDriver().getCurrentUrl(), expectedUrl);
         extentTest.pass("Departments sayfasına başarıyla yönlendirme yapıldı.");
@@ -81,20 +112,21 @@ public class US11 extends TestBaseRapor {
         // 1. Resimlerin yüklenmesi kontrolü
         int numberOfDepartments = homePageDepartmentSection.departmentsImages.size();
         for (int i = 0; i < numberOfDepartments; i++) {
+            ReusableMethods.scrollToElement(homePageDepartmentSection.departmentsImages.get(i));
             Assert.assertTrue(homePageDepartmentSection.departmentsImages.get(i).isDisplayed());
             Assert.assertTrue(homePageDepartmentSection.departmentsImagesTitle.get(i).isDisplayed());
         }
         extentTest.info("Tüm departman resimleri ve başlıkları başarıyla yüklendi.");
 
-        // 2. Her bir departmana TEK TEK tıklayıp sayfa yönlendirmesini kontrol etme (Dokümana %100 Uyum)
+        // 2. Her bir departmana TEK TEK tıklayıp sayfa yönlendirmesini kontrol etme
         for (int i = 0; i < numberOfDepartments; i++) {
             // Sayfa yenilendiğinde elementler kaybolabileceği için Page Object'i tazeliyoruz
             homePageDepartmentSection = new HomePageDepartmentSection();
-            String deptName = homePageDepartmentSection.departmentsImagesTitle.get(i).getText();
+            String deptName = homePageDepartmentSection.departmentsImagesTitle.get(i).getText().toLowerCase().trim().replace(" ","-");
 
             // Tıkla ve doğrula
             homePageDepartmentSection.departmentsImageLinks.get(i).click();
-            Assert.assertTrue(Driver.getDriver().getCurrentUrl().contains(deptName), deptName + " sayfasına gidilemedi!");
+            Assert.assertTrue(Driver.getDriver().getCurrentUrl().contains(deptName), deptName + " sayfasına gidilemedi! Gidilen sayfa: "+Driver.getDriver().getCurrentUrl());
             extentTest.info(deptName + " sayfasına başarıyla yönlendirme yapıldı.");
 
             // Geri dön ve bir sonrakine hazırlan
@@ -106,16 +138,22 @@ public class US11 extends TestBaseRapor {
 
     @Test(priority = 5)
     public void TC_05_DepartmanAyrintiSayfasiFormuGorunumVeDuzenKontrolu(){
+        Driver.getDriver().manage().timeouts().implicitlyWait(Duration.ofSeconds(0));
         extentTest = extentReports.createTest("TC_05", "Departman Ayrıntı Sayfasındaki Formun Görünürlük ve Düzen Kontrolü");
 
-        homePageDepartmentSection.departmentsImageLinks.get(0).click();
+        Driver.getDriver().get(ConfigReader.getProperty("url"));
+        homePageDepartmentSection.departmentsImageLinks.getFirst().click();
         ReusableMethods.waitForPageToLoad(timeout);
 
         DepartmentPage departmentPage = new DepartmentPage();
 
         // 1 & 2. Form ve Başlık Kontrolü
-        Assert.assertTrue(departmentPage.departmentForm.isDisplayed());
-        Assert.assertTrue(departmentPage.departmentFormTitle.isDisplayed());
+        try {
+            Assert.assertTrue(departmentPage.departmentForm.isDisplayed());
+            Assert.assertTrue(departmentPage.departmentFormTitle.isDisplayed());
+        } catch (Exception e) {
+            //beklemeyi atlamak icin trycatch
+        }
         extentTest.info("Form ve başlık görünür durumda.");
 
         // 3. Formdaki TÜM alanlar için Label (Etiket) Kontrolü
@@ -148,8 +186,9 @@ public class US11 extends TestBaseRapor {
 
         // Sonuç Değerlendirmesi
         if (isLabelMissing) {
+            Driver.getDriver().manage().timeouts().implicitlyWait(Duration.ofSeconds(Long.parseLong(ConfigReader.getProperty("timeout"))));
             String errorMessage = "Şu alanlarda etiket (Label) eksik: " + missingLabels.toString();
-            extentTest.fail("BUG BULUNDU (Adım 3): " + errorMessage);
+            extentTest.fail("BUG BULUNDU: " + errorMessage);
             Assert.fail(errorMessage); // Testi Fail eder
         } else {
             extentTest.pass("Tüm form alanlarının etiketleri (Label) başarıyla görüntülendi.");
@@ -162,7 +201,7 @@ public class US11 extends TestBaseRapor {
         Assert.assertTrue(departmentPage.departmentFormSubmitButton.isEnabled());
         extentTest.pass("Form gönderme butonu aktif ve görünür.");
 
-        // 6. Telefon Formatı Bilgisi (Dokümana göre Failed olması gereken adım)
+        // 6. Telefon Formatı Bilgisi
         String phonePlaceholder = departmentPage.departmentFormPhoneNumberInput.getAttribute("placeholder");
         if(phonePlaceholder.equalsIgnoreCase("Phone Number")){
             extentTest.fail("BUG BULUNDU (Adım 6): Telefon numarası inputunda format belirtilmemiş. Sadece 'Phone Number' yazıyor.");
@@ -175,21 +214,20 @@ public class US11 extends TestBaseRapor {
         extentTest.pass("Departman ve Doktor seçim listeleri görünür durumda.");
     }
 
-    @Test(priority = 6)
-    public void TC_06_DepartmanAyrintiSayfasiFormuPozitifTesti(){
+    @Test(priority = 6, dataProvider = "pozitifVeriSeti")
+    public void TC_06_DepartmanAyrintiSayfasiFormuPozitifTestiDinamik(String tarih, String telefon, String mesaj){
         extentTest = extentReports.createTest("TC_06","Departman Ayrıntı Sayfası Form Pozitif Testi");
-        homePageDepartmentSection.departmentsImageLinks.get(0).click();
+        homePageDepartmentSection.departmentsImageLinks.getFirst().click();
+        ReusableMethods.waitForPageToLoad(timeout);
 
         DepartmentPage departmentPage = new DepartmentPage();
 
         // 1. Geçerli Tarih
-        LocalDateTime bugundenIkiGunSonra = LocalDateTime.now().plusDays(2);
-        DateTimeFormatter formatlayici = DateTimeFormatter.ofPattern("ddMMyyyy");
-        departmentPage.departmentFormDateInput.sendKeys(bugundenIkiGunSonra.format(formatlayici));
+
+        departmentPage.departmentFormDateInput.sendKeys(tarih);
 
         // 2. Geçerli Telefon
-        Faker faker = new Faker();
-        departmentPage.departmentFormPhoneNumberInput.sendKeys(faker.number().digits(10));
+        departmentPage.departmentFormPhoneNumberInput.sendKeys(telefon);
 
         JavascriptExecutor js = (JavascriptExecutor) Driver.getDriver();
         // 3. Departman Seç (Wellness)
@@ -199,7 +237,7 @@ public class US11 extends TestBaseRapor {
         js.executeScript("arguments[0].value='21';", departmentPage.hiddenDoctorSelect);
 
         // 5. Mesaj Yaz
-        departmentPage.departmentFormTextArea.sendKeys("bla bla bla - Otomasyon Testi");
+        departmentPage.departmentFormTextArea.sendKeys(mesaj);
 
         // 6. Gönder ve Onayla
         departmentPage.departmentFormSubmitButton.submit();
@@ -210,32 +248,36 @@ public class US11 extends TestBaseRapor {
         extentTest.pass("Randevu başarıyla oluşturuldu ve onay mesajı alındı.");
     }
 
-    @Test(priority = 7)
-    public void TC_07_DepartmanAyrintiSayfasiFormuNegatifTesti(){
+    @Test(dataProvider = "negatifVeriler", priority = 7)
+    public void TC_07_DepartmanAyrintiSayfasiFormuNegatifTesti(String tarih, String telefon, String mesaj){
+        Driver.getDriver().manage().timeouts().implicitlyWait(Duration.ofSeconds(0));
         extentTest = extentReports.createTest("TC_07", "Departman Formu Negatif Testi");
-        homePageDepartmentSection.departmentsImageLinks.get(0).click();
+        Driver.getDriver().get(ConfigReader.getProperty("url"));
+        homePageDepartmentSection.departmentsImageLinks.getFirst().click();
+        ReusableMethods.waitForPageToLoad(timeout);
 
         DepartmentPage departmentPage = new DepartmentPage();
 
         // 1. Geçersiz Tarih (Çok eski ve saçma bir tarih)
-        departmentPage.departmentFormDateInput.sendKeys("03.03.1453");
+        departmentPage.departmentFormDateInput.sendKeys(tarih);
 
         // 2. Geçersiz Telefon (Harf ve semboller)
-        departmentPage.departmentFormPhoneNumberInput.sendKeys("asdasd+!#");
+        departmentPage.departmentFormPhoneNumberInput.sendKeys(telefon);
 
         // 3. Çok Uzun Mesaj (Sınır testi)
-        Faker faker = new Faker();
-        departmentPage.departmentFormTextArea.sendKeys(faker.lorem().characters(1000));
+        departmentPage.departmentFormTextArea.sendKeys(mesaj);
 
         // 4. Formu Gönder
         departmentPage.departmentFormSubmitButton.submit();
+        ReusableMethods.waitForPageToLoad(timeout);
 
         AlertMessageLocators alertMessageLocators = new AlertMessageLocators();
 
         try {
-            ReusableMethods.waitForVisibility(alertMessageLocators.errorMessage, 5);
+            ReusableMethods.waitForVisibility(alertMessageLocators.errorMessage, timeout);
             Assert.assertTrue(alertMessageLocators.errorMessage.isDisplayed());
         } catch (Exception e) {
+            Driver.getDriver().manage().timeouts().implicitlyWait(Duration.ofSeconds(Long.parseLong(ConfigReader.getProperty("timeout"))));
             extentTest.fail("BUG BULUNDU (Adım 1-4): Geçersiz veriler girildi (tarih, telefon, uzun mesaj) ancak sistem uyarı vermeden formu kabul etti!");
             Assert.fail("Sistem geçersiz verilerle gönderimi engellemedi ve hata mesajı göstermedi!");
         }
@@ -251,14 +293,15 @@ public class US11 extends TestBaseRapor {
 
         Driver.getDriver().get(ConfigReader.getProperty("url"));
 
-        // 1b. YATAY KAYDIRMA (OVERFLOW) KONTROLÜ - Dokümana %100 Uyum
+        // 1b. YATAY KAYDIRMA (OVERFLOW) KONTROLÜ
         JavascriptExecutor js = (JavascriptExecutor) Driver.getDriver();
         boolean isOverflowing = (Boolean) js.executeScript("return document.documentElement.scrollWidth > document.documentElement.clientWidth;");
         Assert.assertFalse(isOverflowing, "HATA: Mobil görünümde yatay kaydırma (overflow) tespit edildi!");
         extentTest.info("Sayfa öğeleri mobil ekrana tam oturdu, yatay kaydırma (overflow) yok.");
 
         // 2. Departman kartlarına tıkla ve işlevsellik kontrolü
-        homePageDepartmentSection.departmentsImageLinks.get(0).click();
+        homePageDepartmentSection.departmentsImageLinks.getFirst().click();
+        ReusableMethods.waitForPageToLoad(timeout);
         extentTest.info("Mobilde resim bağlantıları tıklanabilir durumda.");
 
         // 3. Formun mobil ekrana oturması
